# Parallel-DAG-Traversal

./: .gitignore  CMakeLists.txt  README.md
doc/: 并行期末大作业报告.tex
src/: LoserTree.cpp  LoserTree.h  buildDAG.cpp  buildDAG.h  competor.cpp  config.h  parallel_main.cpp  parameters.h  serial_main.cpp
tools/: graph_ge.c  stat.py
